<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceScreen android:key="applist" android:title="@string/applist">
	    <intent android:action="android.intent.action.VIEW" android:targetPackage="de.tubs.ibr.dtn" android:targetClass="de.tubs.ibr.dtn.daemon.AppListActivity" />
	</PreferenceScreen>
    <PreferenceCategory android:title="@string/service">
        <CheckBoxPreference android:key="checkActivate" android:title="@string/runasbackgroundservice" android:disableDependentsState="true"/>
        <CheckBoxPreference android:summary="@string/runonboot_desc" android:title="@string/runonboot" android:defaultValue="false" android:key="runonboot"></CheckBoxPreference>    
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/general">    
        <EditTextPreference android:key="endpoint_id" android:title="@string/endpoint_id" android:summary="@string/eid_description" android:dependency="checkActivate"></EditTextPreference>
        <ListPreference android:key="routing" android:title="@string/routing" android:summary="@string/routing_description" android:entries="@array/routing_scheme_names" android:entryValues="@array/routing_scheme_values" android:defaultValue="prophet" android:dependency="checkActivate"></ListPreference>
        <CheckBoxPreference android:key="checkIdleTimeout" android:summary="@string/autodisconnect_desc" android:defaultValue="true" android:title="@string/autodisconnect" android:dependency="checkActivate"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/discovery">
        <CheckBoxPreference android:summary="@string/discovery_announce_desc" android:title="@string/discovery_announce" android:key="discovery_announce" android:defaultValue="true" android:dependency="checkActivate"></CheckBoxPreference>
        <CheckBoxPreference android:key="discovery_multicast" android:summary="@string/discovery_multicast_desc" android:title="@string/discovery_multicast" android:dependency="checkActivate" android:defaultValue="true"></CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/interfaces" android:key="interfaces" android:dependency="checkActivate">
    </PreferenceCategory>
    
<!-- 
    <PreferenceCategory android:title="@string/statichost">
        <CheckBoxPreference android:key="connect_static" android:title="@string/connect_static" android:dependency="checkActivate"/><EditTextPreference android:title="@string/host_name" android:key="host_name" android:dependency="checkActivate" android:defaultValue="dtn://"/><EditTextPreference android:title="@string/host_address" android:key="host_address" android:dependency="checkActivate" android:defaultValue="0.0.0.0"/>
        <EditTextPreference android:title="@string/host_port" android:key="host_port" android:dependency="checkActivate" android:defaultValue="4556"/>
    </PreferenceCategory>
 -->
 
    <PreferenceCategory android:title="@string/security">
        <CheckBoxPreference android:title="@string/pref_constrains_lifetime" android:key="constrains_lifetime" android:dependency="checkActivate" android:summary="@string/pref_constrains_lifetime_summary"/>
        <CheckBoxPreference android:title="@string/pref_constrains_timestamp" android:key="constrains_timestamp" android:dependency="checkActivate" android:summary="@string/pref_constrains_timestamp_summary"/>
        <!-- Disabled until version 0.8.1 
        <ListPreference android:summary="@string/pref_security_mode_desc" android:title="@string/pref_security_mode" android:key="security_mode" android:dependency="checkActivate" android:entries="@array/security_modes_names" android:entryValues="@array/security_modes_values" android:defaultValue="disabled"/>
        <EditTextPreference android:summary="@string/pref_bab_key_desc" android:title="@string/pref_bab_key" android:key="security_bab_key" android:dependency="checkActivate"/>
         -->
        
        
    </PreferenceCategory>
    
    <PreferenceCategory android:title="System">
<!--    <CheckBoxPreference android:summary="Enable debugging output" android:title="Debug" android:key="debug" android:dependency="checkActivate"/> -->
        <Preference android:title="@string/system_version" android:key="system_version"/>
	</PreferenceCategory>
</PreferenceScreen>
