<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item android:id="@+id/itemCloudUplink" android:title="@string/clouduplink_on" android:icon="@drawable/ic_cloud"></item>    
    </group>
    <item android:title="@string/list_neighbors" android:id="@+id/itemNeighbors" android:alphabeticShortcut="@string/list_neighbors" android:icon="@drawable/ic_neighbors"></item>
    <item android:id="@+id/itemShowLog" android:icon="@drawable/ic_log" android:title="@string/showlog" android:alphabeticShortcut="@string/showlog"></item>
    <item android:id="@+id/itemClearStorage" android:icon="@drawable/ic_clear" android:title="@string/clearstorage" android:alphabeticShortcut="@string/clearstorage"></item>
</menu>
