<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight">
    <ImageView
        android:contentDescription="@string/content_app_icon"
        android:id="@+id/icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:padding="8dp"
        android:background="@null"
        android:src="@drawable/ic_launcher" />
    
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="8dp"
            android:text="@string/launch_daemon"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bottomtext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/launch_description" />

    </LinearLayout>
</LinearLayout>