<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
     
	<RelativeLayout
	    android:id="@+id/layoutTitleBar"
	    android:layout_width="match_parent"
	    android:layout_height="?android:attr/listPreferredItemHeight"
	    android:padding="6dip" >
	
	    <TextView
	        android:id="@+id/labelTitleBar"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignTop="@+id/iconTitleBar"
	        android:layout_toLeftOf="@+id/iconTitleBar"
	        android:layout_marginLeft="4dp"
	        android:gravity="center_vertical"
	        android:text="@string/apps"
	        android:textStyle="bold"
	        android:textSize="22sp" />
	
	    <TextView
	        android:id="@+id/bottomtextTitleBar"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignRight="@+id/labelTitleBar"
	        android:layout_below="@+id/labelTitleBar"
	        android:layout_marginLeft="4dp"
	        android:ellipsize="marquee"
	        android:singleLine="true"
	        android:text="@string/apps_subtitle"
	        android:textSize="12sp" />
	    
	    <ImageButton
	        android:contentDescription="@string/content_titlebar_icon"
	        android:id="@+id/iconTitleBar"
	        android:layout_width="48dp"
	        android:layout_height="48dp"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_margin="2dp"
	        android:background="@null"
	        android:src="@drawable/ic_launcher"
	        android:visibility="invisible" />
	
	</RelativeLayout>
	
	<View
	    android:layout_width="match_parent"
	    android:layout_height="2dp"
	    android:background="@color/blue"
	/>
       
    <ListView  
        android:id="@android:id/list"
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <!-- Preview: listitem=@layout/app_item -->
    </ListView>
 </LinearLayout>